implement loading state for dialog-schedule-history

--- a/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.html
+++ b/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.html
@@ -42,7 +42,11 @@
       </div>
 
       <!--Schedule Summary-->
-      <div class="schedule-history" (click)="openScheduleHistory()">
+      <div
+        class="schedule-history"
+        matTooltip="Click to view your past schedules"
+        (click)="openScheduleHistory()"
+      >
         <h4 class="mini-heading">
           <span mat-symbol="history"></span>Schedule History
         </h4>
