add time label to table

--- a/frontend/src/app/shared/faculty-schedule-timetable/faculty-schedule-timetable.component.html
+++ b/frontend/src/app/shared/faculty-schedule-timetable/faculty-schedule-timetable.component.html
@@ -2,7 +2,7 @@
   <table class="faculty-schedule-timetable-table">
     <thead class="faculty-schedule-timetable-table-header">
       <tr>
-        <th></th>
+        <th>Time</th>
         @for (day of days; track day) {
         <th>{{ day }}</th>
         }
