--- a/frontend/src/app/shared/schedule-timeline/schedule-timeline.component.html
+++ b/frontend/src/app/shared/schedule-timeline/schedule-timeline.component.html
@@ -2,7 +2,7 @@
   <table class="schedule-timeline-table">
     <thead class="schedule-timeline-table-header">
       <tr>
-        <th></th>
+        <th>Time</th>
         @for (day of days; track day) {
         <th>{{ day }}</th>
         }
