--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -67,8 +67,10 @@
 
   // Box Shadow
   --shadow-level-0: 0 0 5px rgba(0, 0, 0, 0.05);
-  --shadow-level-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.12);
-  --shadow-level-2: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  --shadow-level-1: 0 1px 3px rgba(0, 0, 0, 0.12),
+    0 1px 2px rgba(0, 0, 0, 0.12);
+  --shadow-level-2: 0 3px 6px rgba(0, 0, 0, 0.16), 
+    0 3px 6px rgba(0, 0, 0, 0.23);
   --shadow-level-3: 0 10px 20px rgba(0, 0, 0, 0.19),
     0 6px 6px rgba(0, 0, 0, 0.23);
   --shadow-level-4: 0 14px 28px rgba(0, 0, 0, 0.25),
@@ -256,6 +258,10 @@ span[mat-symbol] {
   // when appearance="fill"
   border-top-left-radius: 10px !important;
   border-top-right-radius: 10px !important;
+}
+
+.no-subscript .mat-mdc-form-field-subscript-wrapper {
+  display: none;
 }
 
 .mdc-list-item__primary-text {
