minor changes to display

--- a/frontend/src/app/core/components/admin/main/main.component.html
+++ b/frontend/src/app/core/components/admin/main/main.component.html
@@ -164,7 +164,7 @@
           <div class="admin-account">
             <div class="account-text">
               <div class="account-name">{{ accountName }}</div>
-              <div class="account-role">FLSS {{ accountRole }}istrator</div>
+              <div class="account-role">{{ accountRole }}istrator</div>
             </div>
             <div class="profile-dropdown">
               <img
