--- a/frontend/src/app/shared/dialog-pref-success/dialog-pref-success.component.html
+++ b/frontend/src/app/shared/dialog-pref-success/dialog-pref-success.component.html
@@ -14,7 +14,7 @@
     <!--Message-->
     <p class="message">
       Your load and schedule preferences for this semester have been submitted.
-      You can modify or update your preferences anytime until the submission
+      You can modify or update them anytime until the submission
       deadline at <strong>{{ deadline | date : "longDate" }}  11:59 PM.</strong>
     </p>
   </div>
