modify pre-requisite to allow multiple course selection

--- a/frontend/src/app/shared/table-dialog/table-dialog.component.html
+++ b/frontend/src/app/shared/table-dialog/table-dialog.component.html
@@ -166,6 +166,16 @@
           </mat-option>
           }
         </mat-select>
+        } 
+        @case ('multiselect') {
+        <mat-select [formControlName]="field.formControlName" 
+            multiple>
+          @for (option of field.options; track option) {
+          <mat-option [value]="option">
+            {{ option }}
+          </mat-option>
+          }
+        </mat-select>         
         } @case ('autocomplete') {
         <input
           type="text"
