fix condition for disabling slide toggle for toggling all preferences

--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -155,7 +155,7 @@
             <mat-slide-toggle
               class="header-toggle"
               [checked]="isToggleAllChecked"
-              [disabled]="isAnyIndividualToggleOn"
+              [disabled]="hasIndividualDeadlines && !isToggleAllChecked"
               [matTooltip]="getAllToggleTooltip(isToggleAllChecked)"
               (change)="onToggleAllPreferences($event)"
             >
