refactor academic-year and scheduling components and services to enhance concern separation

--- a/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.html
+++ b/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.html
@@ -17,7 +17,7 @@
       </p>
       } @else {
       <p>
-        Your official load and schedule will be shown below. Please wait for its
+        Your official load and schedule will be shown here. Please wait for its
         release soon.
       </p>
       }
