fix several bugs

--- a/frontend/src/app/shared/dialog-action/dialog-action.component.html
+++ b/frontend/src/app/shared/dialog-action/dialog-action.component.html
@@ -124,7 +124,7 @@
           <span>
             Send email to @if (data.type === 'single_preferences' || data.type
             === 'single_publish') {
-            {{ facultyName }}
+            {{ data.facultyName }}
             } @else { all faculty members }
           </span>
         </span>
