--- a/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.html
+++ b/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.html
@@ -52,16 +52,23 @@
 
     <mat-dialog-content class="content forms-list">
       <form [formGroup]="scheduleForm" class="scheduling-form-group">
-        <!-- Day Field -->
-        <mat-form-field class="scheduling-forms">
-          <mat-label>Day</mat-label>
-          <mat-icon matPrefix>calendar_today</mat-icon>
-          <mat-select formControlName="day">
-            @for (day of data.dayOptions; track day) {
-            <mat-option [value]="day">{{ day }}</mat-option>
-            }
-          </mat-select>
-        </mat-form-field>
+        <!-- Day Picker -->
+        <div class="day-buttons-container">
+          @for (day of dayButtons; track day.name) {
+          <div
+            class="day-button pop-small"
+            [class.selected]="day.name === selectedDay"
+            [class.original-day]="
+              day.name === originalDay && day.name !== selectedDay
+            "
+            (click)="selectDay(day.name)"
+            matRipple
+            [matRippleColor]="'rgba(255, 255, 255, 0.1)'"
+          >
+            {{ day.shortName }}
+          </div>
+          }
+        </div>
 
         <!-- Start and End Time Fields -->
         <div class="date-fields">
@@ -126,10 +133,10 @@
       <!-- Schedule Validator (if applicable) -->
       <div class="schedule-validator">
         @if (conflictMessage) {
-          <div class="validation-message conflict">
-            <span mat-symbol="error"></span>
-            <span>{{ conflictMessage }}</span>
-          </div>
+        <div class="validation-message conflict">
+          <span mat-symbol="error"></span>
+          <span>{{ conflictMessage }}</span>
+        </div>
         }
       </div>
     </mat-dialog-content>
@@ -155,10 +162,7 @@
           (click)="onAssign()"
         >
           @if (isLoading) {
-          <mat-spinner
-            [diameter]="25"
-            class="custom-spinner"
-          ></mat-spinner>
+          <mat-spinner [diameter]="25" class="custom-spinner"></mat-spinner>
           } @else { Assign Schedule }
         </button>
       </div>
