--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -11,9 +11,13 @@
       [showExportButton]="true"
       [showAddButton]="false"
       [showActiveYearAndSem]="false"
-      [buttonDisabled]="!hasAnyPreferences"
+      [buttonDisabled]="!hasAnyPreferences || isToggleAllChecked"
       [tooltipMessage]="
-        !hasAnyPreferences ? 'No faculty preferences available for export' : ''
+        !hasAnyPreferences
+          ? 'No faculty preferences available for export'
+          : isToggleAllChecked
+          ? 'Preferences submission is open; export disabled'
+          : ''
       "
       (export)="onExportAll()"
       (inputChange)="onInputChange($event)"
@@ -100,44 +104,43 @@
             Action
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
+            <!-- View Preferences Button -->
             <span
               [matTooltip]="
-                !hasSubmittedPreferences(element)
-                  ? element.facultyName +
-                    ' has not yet submitted their preferences'
+                element.is_enabled || isToggleAllChecked
+                  ? 'Preferences submission is open; viewing disabled'
                   : ''
               "
-              matTooltipDisabled="false"
             >
               <button
                 mat-button
                 class="sec-ripple view-button"
                 (click)="onView(element)"
-                [disabled]="!hasSubmittedPreferences(element)"
+                [disabled]="element.is_enabled || isToggleAllChecked"
                 [ngClass]="{
-                  'disabled-button': !hasSubmittedPreferences(element)
+                  'disabled-button': element.is_enabled || isToggleAllChecked
                 }"
               >
                 <mat-icon>visibility</mat-icon>
                 <span>View Preferences</span>
               </button>
             </span>
+
+            <!-- Download Button -->
             <span
               [matTooltip]="
-                !hasSubmittedPreferences(element)
-                  ? element.facultyName +
-                    ' has not yet submitted their preferences'
+                element.is_enabled || isToggleAllChecked
+                  ? 'Preferences submission is open; download disabled'
                   : ''
               "
-              matTooltipDisabled="false"
             >
               <button
                 mat-button
                 class="sec-ripple export-button"
                 (click)="onExportSingle(element)"
-                [disabled]="!hasSubmittedPreferences(element)"
+                [disabled]="element.is_enabled || isToggleAllChecked"
                 [ngClass]="{
-                  'disabled-button': !hasSubmittedPreferences(element)
+                  'disabled-button': element.is_enabled || isToggleAllChecked
                 }"
               >
                 <mat-icon>download</mat-icon>
