modify toggle-schedule APIs to set deadlines to null

--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
@@ -77,7 +77,7 @@
       z-index: 2;
 
       &.min {
-        min-width: var(--spacing-md);
+        min-width: var(--spacing-2xl);
       }
     }
 
