--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -119,14 +119,14 @@
         </ng-container>
 
         <!-- Tuition Hours Column -->
-        <ng-container matColumnDef="tuition_hours">
+        <!-- <ng-container matColumnDef="tuition_hours">
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             Tuition<br />Hours
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
             {{ element.tuition_hours }}
           </td>
-        </ng-container>
+        </ng-container> -->
 
         <!-- Day Column -->
         <ng-container matColumnDef="day">
