--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
@@ -210,7 +210,8 @@
       margin-bottom: var(--spacing-xs);
       border-radius: var(--border-radius-sm);
       cursor: pointer;
-      transition: transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.3s ease;
+      transition: transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94),
+        opacity 0.3s ease;
 
       &:hover {
         opacity: var(--opacity-semi-opaque);
@@ -370,6 +371,66 @@
   }
 }
 
+.preferences-closed {
+  @include flex-layout($direction: column, $align: center, $justify: center);
+  opacity: var(--opacity-semi-opaque);
+  height: 100%;
+
+  svg {
+    width: 20rem;
+    height: auto;
+  }
+
+  .closed-info {
+    @include flex-layout($direction: column, $gap: var(--spacing-lg));
+  }
+
+  .closed-text {
+    @include flex-layout($gap: var(--spacing-xs));
+    font-size: var(--font-size-md);
+    text-align: center;
+
+    span[mat-symbol] {
+      font-size: var(--font-size-md);
+    }
+
+    .request-access-link {
+      color: var(--neutral-base);
+      text-decoration: none;
+      font-weight: 500;
+      position: relative;
+      display: inline-block;
+      outline: none;
+      cursor: pointer;
+    }
+
+    .request-access-link::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1.5px;
+      bottom: 0;
+      left: 0;
+      background-color: var(--neutral-base);
+      transform: scaleX(0);
+      transform-origin: right;
+      transition: transform 0.5s ease;
+      backface-visibility: hidden;
+      -webkit-font-smoothing: antialiased;
+      will-change: transform;
+    }
+
+    .request-access-link:hover::after {
+      transform: scaleX(1);
+      transform-origin: left;
+    }
+  }
+
+  .view-preferences button {
+    font-size: var(--font-size-md);
+  }
+}
+
 /* Media Query */
 @media screen and (max-width: 1024px) {
   * {
@@ -409,34 +470,5 @@
         padding-right: 0;
       }
     }
-  }
-}
-
-.preferences-closed {
-  @include flex-layout($direction: column, $align: center, $justify: center);
-  opacity: var(--opacity-semi-opaque);
-  height: 100%;
-
-  svg {
-    width: 20rem;
-    height: auto;
-  }
-
-  .closed-info {
-    @include flex-layout($direction: column, $gap: var(--spacing-lg));
-  }
-
-  .closed-text {
-    @include flex-layout($gap: var(--spacing-xs));
-    font-size: var(--font-size-md);
-    text-align: center;
-
-    span[mat-symbol] {
-      font-size: var(--font-size-md);
-    }
-  }
-
-  .view-preferences button {
-    font-size: var(--font-size-md);
   }
 }
