--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
@@ -104,6 +104,11 @@
         color: var(--green-primary);
       }
 
+      .disabled-text {
+        opacity: 0.5;
+        pointer-events: none;
+      }
+
       .view-button {
         color: var(--secondary-text);
         margin-right: var(--spacing-md);
