--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -68,10 +68,8 @@
 
   // Box Shadow
   --shadow-level-0: 0 0 5px rgba(0, 0, 0, 0.05);
-  --shadow-level-1: 0 1px 3px rgba(0, 0, 0, 0.12),
-    0 1px 2px rgba(0, 0, 0, 0.12);
-  --shadow-level-2: 0 3px 6px rgba(0, 0, 0, 0.16), 
-    0 3px 6px rgba(0, 0, 0, 0.23);
+  --shadow-level-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.12);
+  --shadow-level-2: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   --shadow-level-3: 0 10px 20px rgba(0, 0, 0, 0.19),
     0 6px 6px rgba(0, 0, 0, 0.23);
   --shadow-level-4: 0 14px 28px rgba(0, 0, 0, 0.25),
@@ -219,6 +217,13 @@ span[mat-symbol] {
   background-color: var(--neutral-light) !important;
 }
 
+.add-academic-year-dialog {
+  .mat-mdc-dialog-container 
+  .mat-mdc-dialog-title + .mat-mdc-dialog-content {
+    padding-bottom: var(--spacing-sm);
+  }
+}
+
 // .mat-mdc-header-cell {
 //   border-bottom-color: transparent !important;
 // }
@@ -297,7 +302,7 @@ span[mat-symbol] {
   color: var(--primary-text-reverse) !important;
 }
 
-.mdc-checkbox__native-control:enabled:checked~.mdc-checkbox__background {
+.mdc-checkbox__native-control:enabled:checked ~ .mdc-checkbox__background {
   border-color: var(--primary-text) !important;
   background-color: var(--primary-text) !important;
 }
