add placeholder for search courses field

--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
@@ -139,6 +139,11 @@
     .custom-mat-search {
       width: 100%;
 
+      input::placeholder {
+        color: var(--neutral-button-lighter);
+        
+      }
+
       span[mat-symbol] {
         padding: var(--spacing-sm);
       }
