--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -44,13 +44,13 @@
     <div id="courses_container" [@fadeAnimation]>
       <div id="courses_search">
         <mat-form-field appearance="fill" class="custom-mat-search">
-          <mat-label matTooltip="Search using a course code or course title"
+          <mat-label
             >Search Courses</mat-label
           >
           <input
             matInput
             maxlength="50"
-            matTooltip="Search using a course code or course title"
+            placeholder="Enter a course code or course title"
             [(ngModel)]="searchQuery"
             (input)="onSearchInput()"
             #searchInput
