disable year end field

--- a/frontend/src/app/shared/table-dialog/table-dialog.component.html
+++ b/frontend/src/app/shared/table-dialog/table-dialog.component.html
@@ -48,6 +48,7 @@
               matInput
               [formControlName]="field.formControlName"
               [attr.disabled]="field.disabled ? '' : null"
+              [readonly]="field.disabled ? true : false" 
               [maxlength]="field.maxLength ?? null"
             />
             <input
