comment out dashboard link

--- a/frontend/src/app/core/components/superadmin/main/main.component.html
+++ b/frontend/src/app/core/components/superadmin/main/main.component.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <mat-nav-list class="navbar-list">
-      <div class="group">
+      <!-- <div class="group">
         <h4 class="list-subheader">Dashboard</h4>
         <a
           mat-list-item
@@ -36,7 +36,7 @@
           <span mat-symbol="dashboard" matListItemIcon></span>
           <span matListItemTitle>Dashboard</span>
         </a>
-      </div>
+      </div> -->
 
       <div class="group">
         <h4 class="list-subheader">Management</h4>
