--- a/frontend/src/app/core/components/faculty/home/home.component.scss
+++ b/frontend/src/app/core/components/faculty/home/home.component.scss
@@ -12,7 +12,6 @@
     $gap: var(--spacing-lg)
   );
   height: 100%;
-  overflow: hidden;
 }
 
 .home-row-one {
@@ -125,33 +124,59 @@
       flex: 1;
       min-height: 0;
       overflow-y: auto;
+      padding: 0 2px;
+      @include flex-layout($align: stretch);
+
+      .loading-notifications {
+        height: 100%;
+        width: 80%;
+      }
+
+      .no-notifications {
+        height: 100%;
+        @include flex-layout($direction: column);
+        opacity: var(--opacity-semi-opaque);
+
+        .no-text {
+          @include flex-layout($gap: var(--spacing-xs));
+          font-size: var(--font-size-md);
+          text-align: center;
+
+          span[mat-symbol] {
+            font-size: var(--font-size-md);
+          }
+        }
+
+        img {
+          width: 80%;
+        }
+      }
 
       .notifications-list {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
+        @include flex-layout(
+          $direction: column,
+          $align: stretch,
+          $justify: flex-start,
+          $gap: var(--spacing-sm)
+        );
 
         .notification-item {
-          padding: 1rem;
-          border-radius: 6px;
+          padding: var(--spacing-sm);
+          border-radius: var(--border-radius-sm);
           background-color: var(--main-bg);
-          border-left: 4px solid var(--primary-one);
-          transition: transform 0.2s ease;
-
-          &:hover {
-            transform: translateX(4px);
-          }
+          border-left: 5px solid var(--primary-one);
+          box-shadow: var(--shadow-level-1);
 
           .notification-message {
-            margin: 0 0 0.5rem 0;
+            margin: 0 0 var(--spacing-xs) 0;
             color: var(--neutral-base);
-            font-size: 0.95rem;
+            font-size: var(--font-size-md);
           }
 
           .notification-timestamp {
             display: block;
             color: var(--neutral-base);
-            font-size: 0.85rem;
+            font-size: var(--font-size-sm);
             opacity: var(--opacity-semi-opaque);
           }
         }
