--- a/frontend/src/app/core/components/faculty/home/home.component.html
+++ b/frontend/src/app/core/components/faculty/home/home.component.html
@@ -28,11 +28,18 @@
   <div class="home-row-two" [@fadeAnimation]>
     <!-- Active Semester -->
     <div class="active-year-sem-container">
-      <p class="text">
-        A.Y. {{ activeYear }},
-        {{ activeSemester }}
-      </p>
-      <p class="label">Current Academic Year & Semester</p>
+      <!--Icon Container-->
+      <div class="icon-container">
+        <span mat-symbol="event_note" weight="300"></span>
+      </div>
+      <!--Text Container-->
+      <div class="text-container">
+        <p class="text">
+          A.Y. {{ activeYear }},
+          {{ activeSemester }}
+        </p>
+        <p class="label">Current Academic Year & Semester</p>
+      </div>
     </div>
 
     <!--Announcement-->
