temporarily remove settings button

--- a/frontend/src/app/core/components/admin/main/main.component.html
+++ b/frontend/src/app/core/components/admin/main/main.component.html
@@ -145,9 +145,9 @@
             </div>
 
             <!-- Settings Button -->
-            <div class="panel-button settings" matTooltip="Settings" matRipple>
+            <!-- <div class="panel-button settings" matTooltip="Settings" matRipple>
               <span mat-symbol="settings"></span>
-            </div>
+            </div> -->
 
             <!-- Logout Button -->
             <div
