add feature coming soonin admin notifications

--- a/frontend/src/app/core/components/admin/overview/overview.component.html
+++ b/frontend/src/app/core/components/admin/overview/overview.component.html
@@ -253,7 +253,7 @@
           <span mat-symbol="notifications"></span>Notifications
         </h2>
         <div class="notifications-content">
-          <span>No notifications yet.</span>
+          <em>Feature coming soon.</em>
         </div>
       </div>
     </div>
