--- a/frontend/src/app/core/components/admin/overview/overview.component.scss
+++ b/frontend/src/app/core/components/admin/overview/overview.component.scss
@@ -329,6 +329,7 @@
       .notifications-content {
         flex: 1;
         @include flex-layout;
+        opacity: var(--opacity-semi-opaque);
       }
     }
   }
