--- a/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.html
+++ b/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.html
@@ -20,7 +20,7 @@
   <div class="faculty-table-container" [@fadeAnimation]>
     <app-table-generic
       [columns]="columns"
-      [data]="faculty"
+      [data]="filteredFaculty"
       [tableName]="'faculty'"
       [displayedColumns]="displayedColumns"
       [showViewButton]="false"
